--- a/popup.html
+++ b/popup.html
@@ -2,24 +2,11 @@
 <html>
 <head>
     <script src="popup.js" type="text/javascript"></script>
+    <link href="popup.css" rel="stylesheet">
 </head>
 <body>
 
-<h3 style="font-weight:bold; text-align:center;">Links</h3>
-
 <span id="total"></span>
-
-<br/>
-<br/>
-
-<!--<span id="linkTitles"></span>-->
-
-<!--todo convert the passed links to tables & charts using inline js-->
-
-<br/>
-<br/>
-
-If no value is show, try reloading the page.
 
 </body>
 </html>
